--- a/src/premiere.html
+++ b/src/premiere.html
@@ -537,7 +537,7 @@
                                                     <p>
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=NFLELQAGKKFKQ"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
-                                                    <button class="stripeButton" onclick="stripeCheckout('premiere.annual', 'payment')">Pay with card / Other</button>
+                                                    <button class="stripeButton" onclick="stripeCheckout('plan_KOEhmIX9xWvkTR', 'payment')">Pay with card / Other</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -903,7 +903,7 @@
                                             <div class="widget widget_text">
                                                 <div class="textwidget">
                                                     <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=NFLELQAGKKFKQ"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a></p>
-                                                    <button class="stripeButton" onclick="stripeCheckout('premiere.annual', 'payment')">Pay with card / Other</button>
+                                                    <button class="stripeButton" onclick="stripeCheckout('plan_KOEhmIX9xWvkTR', 'payment')">Pay with card / Other</button>
                                                 </div>
                                             </div>
                                         </div>
