--- a/src/freebsd-server.html
+++ b/src/freebsd-server.html
@@ -440,7 +440,7 @@
 
                                 <p>First, make sure your FreeBSD system is <b>configured for latest packages</b>.</p>
                                 <div><b>Install dependencies:</b></div>
-                                <div><code>sudo pkg install mono6.8 libass fontconfig freetype2 fribidi gnutls iconv opus sqlite3 libtheora libva ocl-icd libvorbis webp libzvbi libraw ImageMagick6</code></div>
+                                <div><code>sudo pkg install mono6.8 libass fontconfig freetype2 fribidi gnutls iconv opus sqlite3 libtheora libva ocl-icd libvorbis webp libzvbi libraw ImageMagick6 tesseract intel-media-sdk</code></div>
                                 <br />
                                 <div><b>Install Emby Server on FreeBSD 13:</b></div>
                                 <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-freebsd13_{version}_amd64.pkg">pkg add -f {url}</code></div>
