--- a/src/premiere.html
+++ b/src/premiere.html
@@ -460,7 +460,6 @@
                         <h1>Emby Premiere</h1>
                         <p>Enjoy additional features to enhance your personal media experience.</p>
                         <p style="font-weight: bold">Emby is NOT a media streaming service.  We provide no content.  Emby is a Personal Media Server platform.  <span style="color:red">You must have your own server installed and your own media (or Live TV tuner).</span> Please only purchase one of the items below if you have your own Emby Server already installed.</p>
-                        <h2 style="font-weight: bold; color: red">Cyber Weekend Sale!  Premiere Lifetime only $99</h2>
                     </div>
                 </div>
             </div>
@@ -561,7 +560,7 @@
                                     </div> <!-- header -->
                                     <div class="aio-icon-description" style="">
                                         <p>
-                                            <span style="text-decoration: line-through;">$119</span> <span style="color: red">$99</span>/One-time<br>
+                                            $119/One-time<br>
                                         </p>
                                         <div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
@@ -569,7 +568,7 @@
                                                     <p>
                                                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=3GKHZLX4B9E32"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a>
                                                     </p>
-                                                    <button class="stripeButton" onclick="stripeCheckout('price_1JjTCXBCVt2QGDKHHH8riRo0', 'payment')">Pay with card / Other</button>
+                                                    <button class="stripeButton" onclick="stripeCheckout('price_1JjTCXBCVt2QGDKHUZQZ86EI', 'payment')">Pay with card / Other</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -922,12 +921,12 @@
                                         </div>
                                     </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Lifetime</h3></div> <!-- header --><div class="aio-icon-description" style="">
                                         <p>
-                                            <span style="text-decoration: line-through;">$119</span> <span style="color: red">$99</span>/One-time<br>
+                                            $119/One-time<br>
                                         </p><div class="vc_wp_text wpb_content_element">
                                             <div class="widget widget_text">
                                                 <div class="textwidget">
                                                     <p><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=3GKHZLX4B9E32"><img src="resources/checkout-logo-medium.png" alt="Check out with PayPal"></a></p>
-                                                    <button class="stripeButton" onclick="stripeCheckout('price_1JjTCXBCVt2QGDKHHH8riRo0', 'payment')">Pay with card / Other</button>
+                                                    <button class="stripeButton" onclick="stripeCheckout('price_1JjTCXBCVt2QGDKHUZQZ86EI', 'payment')">Pay with card / Other</button>
                                                 </div>
                                             </div>
                                         </div>
