--- a/src/synology-server.html
+++ b/src/synology-server.html
@@ -446,10 +446,10 @@
                                         <li>
                                             <div>Download one of the following packages depending the <a target="_blank" href="https://github.com/SynoCommunity/spksrc/wiki/Architecture-per-Synology-model">architecture of your Synology NAS</a>:</div>
                                             <ul>
-                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_x86_64.spk" href="emby-server-synology_{version}_x86_64.spk">64-bit NAS</a></li>
-                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_armv8.spk" href="emby-server-synology_{version}_armv8.spk">ARMv8 (x18 Series)</a></li>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology7_{version}_x86_64.spk" href="emby-server-synology7_{version}_x86_64.spk">64-bit NAS</a></li>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology7_{version}_armv8.spk" href="emby-server-synology7_{version}_armv8.spk">ARMv8 (x18 Series)</a></li>
                                                 <li>
-                                                    <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology_{version}_armv7.spk" href="emby-server-synology_{version}_armv7.spk">ARMv7</a> - Supported models:</div>
+                                                    <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology7_{version}_armv7.spk" href="emby-server-synology7_{version}_armv7.spk">ARMv7</a> - Supported models:</div>
                                                     <ul>
                                                         <li><b>armada375: </b>DS115, DS215j</li>
                                                         <li><b>armada38x: </b>DS419slim, DS218j, RS217, DS116, DS216j, DS216, DS416j, DS416slim, RS816</li>
@@ -457,10 +457,8 @@
                                                         <li><b>monaco: </b>DS216play</li>
                                                     </ul>
                                                 </li>
-                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology-mono_{version}_armv7_legacy.spk" href="emby-server-synology-mono_{version}_armv7_legacy.spk">ARMv7 (all other ARMv7 models)</a></li>
-                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology-mono_{version}_armv5.spk" href="emby-server-synology-mono_{version}_armv5.spk">ARMv5</a></li>
-                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology-mono_{version}_x86.spk" href="emby-server-synology-mono_{version}_x86.spk">32-bit (X86)</a></li>
-                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology-mono_{version}_ppc.spk" href="emby-server-synology-mono_{version}_ppc.spk">PPC</a></li>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology7-mono_{version}_armv7_legacy.spk" href="emby-server-synology7-mono_{version}_armv7_legacy.spk">ARMv7 (all other ARMv7 models)</a></li>
+                                                <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="release" data-filename="emby-server-synology7-mono_{version}_x86.spk" href="emby-server-synology7-mono_{version}_x86.spk">32-bit (X86)</a></li>
                                             </ul>
                                         </li>
                                         <li>Install Emby Server using the Synology Web interface.</li>
@@ -472,10 +470,10 @@
                                     <p><b>Emby Server (BETA) for Synology NAS Manual Installation</b></p>
                                     <p>To participate in Emby Server beta testing, download one of the following packages depending on your Synology NAS model:</p>
                                     <ul>
-                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_x86_64.spk" href="emby-server-synology_{version}_x86_64.spk">64-bit NAS</a></li>
-                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_armv8.spk" href="emby-server-synology_{version}_armv8.spk">ARMv8 (x18 Series)</a></li>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology7_{version}_x86_64.spk" href="emby-server-synology7_{version}_x86_64.spk">64-bit NAS</a></li>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology7_{version}_armv8.spk" href="emby-server-synology7_{version}_armv8.spk">ARMv8 (x18 Series)</a></li>
                                         <li>
-                                            <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology_{version}_armv7.spk" href="emby-server-synology_{version}_armv7.spk">ARMv7</a> - Supported models:</div>
+                                            <div><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology7_{version}_armv7.spk" href="emby-server-synology7_{version}_armv7.spk">ARMv7</a> - Supported models:</div>
                                             <ul>
                                                 <li><b>armada375: </b>DS115, DS215j</li>
                                                 <li><b>armada38x: </b>DS419slim, DS218j, RS217, DS116, DS216j, DS216, DS416j, DS416slim, RS816</li>
@@ -483,10 +481,8 @@
                                                 <li><b>monaco: </b>DS216play</li>
                                             </ul>
                                         </li>
-                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology-mono_{version}_armv7_legacy.spk" href="emby-server-synology-mono_{version}_armv7_legacy.spk">ARMv7 (all other ARMv7 models)</a></li>
-                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology-mono_{version}_armv5.spk" href="emby-server-synology-mono_{version}_armv5.spk">ARMv5</a></li>
-                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology-mono_{version}_x86.spk" href="emby-server-synology-mono_{version}_x86.spk">32-bit (X86)</a></li>
-                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology-mono_{version}_ppc.spk" href="emby-server-synology-mono_{version}_ppc.spk">PPC</a></li>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology7-mono_{version}_armv7_legacy.spk" href="emby-server-synology7-mono_{version}_armv7_legacy.spk">ARMv7 (all other ARMv7 models)</a></li>
+                                        <li><a class="lnkPackageDownload lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-synology7-mono_{version}_x86.spk" href="emby-server-synology7-mono_{version}_x86.spk">32-bit (X86)</a></li>
                                     </ul>
 
                                 </div>
