--- a/src/flatpak-server.html
+++ b/src/flatpak-server.html
@@ -402,6 +402,15 @@
                                     <div style="margin: 0 auto; max-width: 450px;">
                                         <h2>Installation</h2>
 
+                                        <p>Emby Server can be installed from FlatHub.</p>
+                                        <ol class="instructionList">
+                                            <li><code style="white-space:nowrap;">flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo</code></li>
+                                            <li><code style="white-space:nowrap;">flatpak install flathub media.emby.EmbyServer</code></li>
+                                            <li>Open a web browser to http://localhost:8096</li>
+                                        </ol>
+
+                                        <h2>Installation (BETA)</h2>
+
                                         <div><b class="instructionListHeader">Emby Server - X64</b></div>
                                         <ol class="instructionList">
                                             <li>Download <a class="lnkPackageDownload" data-level="release" data-filename="emby-server-flatpak_{version}_x86_64.tar.xz" href="https://github.com/MediaBrowser/Emby.Releases/releases/download/4.4.3.0/emby-server-flatpak_4.4.3.0_x86_64.flatpak">Emby Server for Flatpak</a>.</li>
