--- a/src/flatpak-server.html
+++ b/src/flatpak-server.html
@@ -402,7 +402,7 @@
                                     <div style="margin: 0 auto; max-width: 450px;">
                                         <h2>Installation</h2>
 
-                                        <p>Emby Server can be installed from FlatHub.</p>
+                                        <p>Emby Server can be <a href="https://flathub.org/apps/details/media.emby.EmbyServer" target="_blank">installed from FlatHub</a>.</p>
                                         <ol class="instructionList">
                                             <li><code style="white-space:nowrap;">flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo</code></li>
                                             <li><code style="white-space:nowrap;">flatpak install flathub media.emby.EmbyServer</code></li>
