Update Roku page

--- a/src/emby-for-roku.html
+++ b/src/emby-for-roku.html
@@ -434,22 +434,22 @@
                                 <p><span style='font-size: 18px'>A beautiful detail screen presentation allows you access to all the information for a particular item as well as cast, related content and suggestions.</p>
 
                                 <p>
-                                    <span rel='lightbox'><img class='bbc_img' src='community/uploads/inline/3/591d9606291bb_moviedetail1.jpg' alt='Posted Image' /></span>
+                                    <span rel='lightbox'><img class='bbc_img' src='resources/rokumoviedetail.jpg' alt='Posted Image' /></span>
 
-                                    <span rel='lightbox'><img class='bbc_img' src='community/uploads/inline/3/591d9627b13da_albumdetail2.jpg' alt='Posted Image' /></span>
+                                    <span rel='lightbox'><img class='bbc_img' src='resources/rokualbum.jpg' alt='Posted Image' /></span>
                                 </p>
 
                                 <h2>Hear the Music</h2>
                                 <p><span style='font-size: 18px'>Emby for Roku is designed for your music collection. Queue items, shuffle play, instant mix and move freely among the queue.</p>
 
-                                <p><span rel='lightbox'><img class='bbc_img' src='community/uploads/inline/3/591d9644ec63a_audioplayer1.jpg' alt='Posted Image' /></span></p>
+                                <p><span rel='lightbox'><img class='bbc_img' src='resources/rokuaudioplayer1.jpg' alt='Posted Image' /></span></p>
 
-                                <span rel='lightbox'><img class='bbc_img' src='community/uploads/inline/3/591d96566ca78_audioss2.jpg' alt='Posted Image' /></span>
+                                <span rel='lightbox'><img class='bbc_img' src='resources/rokuaudioplayer2.jpg' alt='Posted Image' /></span>
 
                                 <h2>Watch it Live</h2>
                                 <p><span style='font-size: 18px'>Emby for Roku also gives you easy access to Live TV (with supported hardware and configuration and an <a href="premiere.html">Emby Premiere</a> subscription) with a full, graphical guide.</p>
 
-                                <p><span rel='lightbox'><img class='bbc_img' src='community/uploads/inline/3/591d96d77922d_tvguide1.jpg' alt='Posted Image' /></span></p>
+                                <p><span rel='lightbox'><img class='bbc_img' src='resources/rokuguide.jpg' alt='Posted Image' /></span></p>
 
                             </div>
                         </div>
@@ -500,7 +500,7 @@
         <!-- subfooter: bottom -->
         <div class="l-subfooter at_bottom">
             <div class="l-subfooter-h i-cf">
-                <div class="w-copyright"><p>© 2020 Emby LLC</p><p style="margin-top:1em;">Emby is designed to help you manage your personal media library, such as home videos and photos.  Please see our <a href="terms.html">terms of use</a> and <a href="privacy.html">privacy policy</a>.  Downloading any Emby software constitutes acceptance of these terms.</p></div>
+                <div class="w-copyright"><p>© 2022 Emby LLC</p><p style="margin-top:1em;">Emby is designed to help you manage your personal media library, such as home videos and photos.  Please see our <a href="terms.html">terms of use</a> and <a href="privacy.html">privacy policy</a>.  Downloading any Emby software constitutes acceptance of these terms.</p></div>
 
             </div>
         </div>
