Update Premiere page

--- a/src/premiere.html
+++ b/src/premiere.html
@@ -670,11 +670,15 @@
                                 <div class="aio-icon-box top-icon" style="">
                                     <div class="aio-icon-top">
                                         <div class="ult-just-icon-wrapper ">
-                                            <div class="aio-icon-img " style="font-size:160px;display:inline-block;">
-                                                <img class="img-icon" alt="" src="resources/coverart1.png">
+                                            <div class="aio-icon-img " style="font-size: 160px; display: inline-block;">
+                                                <img class="img-icon" alt="" src="resources/hardwareaccel.png">
                                             </div>
                                         </div>
-                                    </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Cover Art</h3></div> <!-- header --><div class="aio-icon-description" style="">The Cover Art plugin creates fun covers and other treatments for your media images. Choose from over 30 different styles of treatments and overlays for 3D, subtitles, audio, and more.</div> <!-- description -->
+                                    </div>
+                                    <div class="aio-icon-header">
+                                        <h3 class="aio-icon-title" style="">Hardware Accelerated Transcoding</h3>
+                                    </div> <!-- header -->
+                                    <div class="aio-icon-description" style="">Take advantage of your server GPU.  Emby has the most advanced and fastests hardware accelleration in the industry.</div> <!-- description -->
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
                         </div>
@@ -756,15 +760,11 @@
                                 <div class="aio-icon-box top-icon" style="">
                                     <div class="aio-icon-top">
                                         <div class="ult-just-icon-wrapper ">
-                                            <div class="aio-icon-img " style="font-size: 160px; display: inline-block;">
-                                                <img class="img-icon" alt="" src="resources/foldersync.png">
+                                            <div class="aio-icon-img " style="font-size:160px;display:inline-block;">
+                                                <img class="img-icon" alt="" src="resources/coverart1.png">
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="aio-icon-header">
-                                        <h3 class="aio-icon-title" style="">Folder Sync</h3>
-                                    </div> <!-- header -->
-                                    <div class="aio-icon-description" style="">Sync your media to folders and external hard drives for easy backup, archiving, and converting. Store your content in multiple resolutions to enable direct streaming from any device.</div> <!-- description -->
+                                    </div><div class="aio-icon-header"><h3 class="aio-icon-title" style="">Cover Art</h3></div> <!-- header --><div class="aio-icon-description" style="">The Cover Art plugin creates fun covers and other treatments for your media images. Choose from over 30 different styles of treatments and overlays for 3D, subtitles, audio, and more.</div> <!-- description -->
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
                         </div>
@@ -799,9 +799,9 @@
                                         </div>
                                     </div>
                                     <div class="aio-icon-header">
-                                        <h3 class="aio-icon-title" style="">Cloud Sync</h3>
+                                        <h3 class="aio-icon-title" style="">Folder Sync</h3>
                                     </div> <!-- header -->
-                                    <div class="aio-icon-description" style="">Sync your media to the cloud for easy backup, archiving, and converting. Store your content in multiple resolutions to enable direct streaming from any device.</div> <!-- description -->
+                                    <div class="aio-icon-description" style="">Sync your media to folders and external hard drives for easy backup, archiving, and converting. Store your content in multiple resolutions to enable direct streaming from any device.</div> <!-- description -->
                                 </div> <!-- aio-icon-box -->
                             </div> <!-- aio-icon-component -->
                         </div>
