--- a/src/emby-for-windows-media-center.html
+++ b/src/emby-for-windows-media-center.html
@@ -408,6 +408,7 @@
                 <div class="l-submain-h g-html i-cf">
                     <div class="w-pagehead">
                         <h1>Emby for Windows Media Center</h1>
+                        <h2 style="color:red">No longer supported beyond server version 4.6</h2>
                     </div>
                 </div>
             </div>
