Remove Roku beta link

--- a/src/emby-for-roku.html
+++ b/src/emby-for-roku.html
@@ -459,18 +459,14 @@
                                 <div class="wpb_wrapper">
 
                                     <h4>Download</h4>
-                                    <p>Emby for Roku is available in the <a href="https://github.com/MediaBrowser/Wiki/wiki/Roku" target="_blank">Roku App Store</a>.</p>
+                                    <p>Emby for Roku is available in the Roku App Store.</p>
                                     <div>
                                         <a href="https://www.roku.com/channels#!details/44191/emby" target="_blank">Visit the Roku App Store</a>
                                     </div>
                                     <div style="margin-top:1em;">
-                                        <a href="https://github.com/MediaBrowser/Wiki/wiki/Roku" target="_blank">Emby for Roku Wiki</a>
+                                        <a href="https://support.emby.media/support/solutions/articles/44001161839-roku" target="_blank">Emby for Roku KB Article</a>
                                     </div>
 
-                                    <h4>Want to help test and shape the future of Emby for Roku?</h4>
-                                    <div style="margin-top:1em;">
-                                        Install the beta <a href="https://my.roku.com/account/add?channel=EmbyBeta" target="_blank">private channel</a> on your compatible Roku device (firmware 7.5+)
-                                    </div>
 
                                 </div>
                             </div> <div class="g-cols wpb_row offset_wide"><div class="full-width"></div></div><div class="g-cols wpb_row offset_wide"></div><div class="full-width"></div>
