--- a/src/emby-for-roku.html
+++ b/src/emby-for-roku.html
@@ -461,7 +461,7 @@
                                     <h4>Download</h4>
                                     <p>Emby for Roku is available in the Roku App Store.</p>
                                     <div>
-                                        <a href="https://my.roku.com/account/add/emby" target="_blank">Install from the Roku App Store</a>
+                                        <a href="https://channelstore.roku.com/details/904d20cb3bd4aa340a35aa9c83c9a128/emby" target="_blank">Visit the Roku App Store</a>
                                     </div>
                                     <div style="margin-top:1em;">
                                         <a href="https://support.emby.media/support/solutions/articles/44001161839-roku" target="_blank">Emby for Roku KB Article</a>
