--- a/src/qnap-server.html
+++ b/src/qnap-server.html
@@ -459,6 +459,8 @@
 
                                     <p><b>Emby Server for QNAP NAS Manual Installation</b></p>
 
+                                    <p>Before installing Emby on QNAP, you must have "Allow installation and execution of applications without a digital signature" selected and applied on the QNAP server at this location: App Center / Settings [gear wheel] / General. (This will produce a warning.) You must leave this setting on in order to avoid having Emby Server app shut down every day or so by the QNAP system (which would then require a manual restart of the Emby Server app).</p>
+
                                     <ol class="instructionList">
                                         <li>
                                             <div>Download one of the following packages depending on your QNAP NAS model:</div>
