--- a/src/truenas-server.html
+++ b/src/truenas-server.html
@@ -439,6 +439,8 @@
                         <div>
                             <div class="wpb_text_column ">
                                 <div class="wpb_wrapper">
+                                    <p style="margin-bottom:0;">Looking for <a href="truenas-scale-server.html">TrueNAS Scale</a>?</p>
+                                    <h2 style="margin: .75em 0;padding:0;">Emby Server for TrueNAS Installation</h2>
                                     <ol class="instructionList">
                                         <li>
                                             Install Emby Server Using the Terminal:
