--- a/src/freebsd-server.html
+++ b/src/freebsd-server.html
@@ -441,6 +441,15 @@
                                 <p>First, make sure your FreeBSD system is <b>configured for latest packages</b>.</p>
                                 <div><b>Install dependencies:</b></div>
                                 <div><code>sudo pkg install libass fontconfig freetype2 fribidi gnutls iconv opus sqlite3 libtheora libva ocl-icd libvorbis webp libzvbi libraw ImageMagick6 tesseract intel-media-sdk libunwind libinotify openssl icu krb5</code></div>
+
+
+                                <br />
+                                <div>
+                                    If you're installing Emby Server into a jail, update jail.conf:
+                                    <div><code>allow.mlock = 1;</code></div>
+                                    <div><code>ip6 = inherit;</code></div>
+                                </div>
+
                                 <br />
                                 <div><b>Install Emby Server on FreeBSD 13:</b></div>
                                 <div><code style="white-space:nowrap;" class="lnkPackageInnerHtml" data-level="beta" data-filename="emby-server-freebsd13_{version}_amd64.pkg">pkg add -f {url}</code></div>
