--- a/src/truenas-server.html
+++ b/src/truenas-server.html
@@ -446,7 +446,7 @@
                                             Install Emby Server Using the Terminal:
                                             <div><b>TrueNAS 13:</b></div>
                                             <pre>
-git clone -b truenas12 https://github.com/MediaBrowser/iocage-amd64.git
+git clone https://github.com/MediaBrowser/iocage-amd64.git
 cd iocage-amd64
 iocage fetch -P emby-server.json dhcp="on" ip6="inherit" allow_mlock="on" --branch master
 </pre>
