--- a/src/mac-server.html
+++ b/src/mac-server.html
@@ -410,11 +410,18 @@
                                 <div class="wpb_wrapper">
 
                                     <div style="margin:0 auto;max-width:450px;">
-                                        <h2>Installation</h2>
-                                        <p>
-                                            <strong>Download</strong><br>
-                                            Download <a class="lnkPackageDownload" data-filename="embyserver-osx-x64-{version}.zip" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/embyserver-osx-x64-3.2.50.0.zip" onclick="ga('send', 'event', 'Download Links', 'Downloaded', 'MacRelease');">Emby Server for MacOS</a>.
-                                        </p>
+
+                                        <p><b>Emby Server for macOS Installation</b></p>
+
+                                        <ol class="instructionList">
+                                            <li>
+                                                <div>Download one of the following:</div>
+                                                <ul>
+                                                    <li><a class="lnkPackageDownload" data-filename="embyserver-osx-x64-{version}.zip" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/embyserver-osx-x64-3.2.50.0.zip" onclick="ga('send', 'event', 'Download Links', 'Downloaded', 'MacRelease');">macOS 10.15+ (Catalina and above)</a></li>
+                                                </ul>
+                                            </li>
+                                        </ol>
+
                                         <p>
                                             <strong>Drag to Applications Folder</strong><br>
                                             After the download has completed, use Finder to drag EmbyServer from your Downloads folder to your Applications folder.
