--- a/src/mac-server.html
+++ b/src/mac-server.html
@@ -418,7 +418,7 @@
                                                 <div>Download one of the following:</div>
                                                 <ul>
                                                     <li><a class="lnkPackageDownload" data-filename="embyserver-osx-x64-{version}.zip" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/embyserver-osx-x64-3.2.50.0.zip" onclick="ga('send', 'event', 'Download Links', 'Downloaded', 'MacRelease');">macOS 10.14+ (Mojave and above)</a></li>
-                                                    <li><a class="lnkPackageDownload" data-filename="https://embyserver-osx.10.13-x64-{version}.zip/" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/embyserver-osx-x64-3.2.50.0.zip" onclick="ga('send', 'event', 'Download Links', 'Downloaded', 'MacRelease');">macOS 10.13+ (High Sierra and above)</a></li>
+                                                    <li><a class="lnkPackageDownload" data-filename="embyserver-osx.10.13-x64-{version}.zip" href="https://github.com/MediaBrowser/Emby/releases/download/3.2.50.0/embyserver-osx-x64-3.2.50.0.zip" onclick="ga('send', 'event', 'Download Links', 'Downloaded', 'MacRelease');">macOS 10.13+ (High Sierra and above)</a></li>
                                                 </ul>
                                             </li>
                                         </ol>
