--- a/src/emby-theater-rpi.html
+++ b/src/emby-theater-rpi.html
@@ -431,7 +431,10 @@
 
                                     <h2>Raspberry Pi Image</h2>
                                     <div>This is an image that will launch straight into Emby Theater. If there is no network connection then raspi-config is launched allowing users to connect to a network.</div>
-                                    <span class="wpb_button align_left"><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.15/emby-theater-rpi_3.0.15.zip" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-download"></i><span>Download</span><span class="ripple-container"></span></a></span>
+                                    <ul style="margin:.5em 0 1em 2em;">
+                                        <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.16/emby-theater-rpi_3.0.16_arm64.img.xz" title="Emby Theater RPI for Arm64">Emby Theater RPI for Arm64</a></li>
+                                        <li><a href="https://github.com/MediaBrowser/emby-theater-electron/releases/download/3.0.16/emby-theater-rpi_3.0.16_armhf.img.xz" title="Emby Theater RPI for Armhf">Emby Theater RPI for Armhf</a></li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
