--- a/src/truenas-server.html
+++ b/src/truenas-server.html
@@ -449,12 +449,14 @@
 git clone https://github.com/MediaBrowser/iocage-amd64.git
 cd iocage-amd64
 iocage fetch -P emby-server.json dhcp="on" ip6="inherit" allow_mlock="on" --branch master
+iocage set plugin_repository='https://github.com/MediaBrowser/iocage-amd64.git' emby-server
 </pre>
                                             <div><b>TrueNAS 12:</b></div>
                                             <pre>
 git clone -b truenas12 https://github.com/MediaBrowser/iocage-amd64.git
 cd iocage-amd64
 iocage fetch -P emby-server.json dhcp="on" ip6="inherit" allow_mlock="on" --branch truenas12
+iocage set plugin_repository='https://github.com/MediaBrowser/iocage-amd64.git' emby-server
 </pre>
                                         </li>
                                         <li>You may need to configure storage within your TrueNAS Jail in order to allow Emby to access it. See <a target="_blank" href="https://www.ixsystems.com/documentation/freenas/11/jails.html#add-storage">Adding storage to TrueNAS.</a></li>
