--- a/src/snap-server.html
+++ b/src/snap-server.html
@@ -3,8 +3,8 @@
 <head itemscope itemtype="https://schema.org/Article">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
-    <title>Emby Server for Flatpak</title>
-    <meta name="description" content="Emby Server for Flatpak - Organize and stream your personal videos, music, photos and Live TV to any device.">
+    <title>Emby Server for Snap</title>
+    <meta name="description" content="Emby Server for Snap - Organize and stream your personal videos, music, photos and Live TV to any device.">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     {SOCIALNETWORKS}
     <link rel="stylesheet" id="rs-plugin-settings-css" href="resources/settings.css" type="text/css" media="all">
@@ -413,7 +413,7 @@
                             <div class="wpb_text_column ">
                                 <div class="wpb_wrapper">
                                     <h4>Resources</h4>
-                                    <span class="wpb_button align_left"><a href="community/index.php?/search/&q=flatpak" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-users"></i><span>Community</span><span class="ripple-container"></span></a></span>
+                                    <span class="wpb_button align_left"><a href="community/index.php?/search/&q=snap" target="_blank" class="g-btn color_primary type_raised"><i class="fa fa-users"></i><span>Community</span><span class="ripple-container"></span></a></span>
                                 </div>
                             </div>
                         </div>
